--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -82,3 +82,32 @@ jobs:
         (steps.cache-dependencies.outputs.cache-hit != 'true')
       run: |
         npm install --verbose
+  
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    needs: [ setup ]
+    steps:
+    - id: setup-node
+      name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ env.NODE_VERSION }}
+
+    - id: checkout
+      name: Checkout
+      uses: actions/checkout@v3
+
+    - id: cache-dependencies
+      name: Cache dependencies
+      uses: actions/cache@v3
+      with:
+        path: |
+          **/node_modules
+          **/.cache
+        key: node-modules-${{ secrets.CACHE_VERSION }}-${{ hashFiles('package.json') }}
+
+    - id: lint
+      name: Lint
+      run: |
+        npm run lint
