--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -111,3 +111,34 @@ jobs:
       name: Lint
       run: |
         npm run lint
+
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    if: |
+      (github.event_name == 'pull_request')
+    needs: [ lint ]
+    steps:
+    - id: setup-node
+      name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ env.NODE_VERSION }}
+
+    - id: checkout
+      name: Checkout
+      uses: actions/checkout@v3
+
+    - id: cache-dependencies
+      name: Cache dependencies
+      uses: actions/cache@v3
+      with:
+        path: |
+          **/node_modules
+          **/.cache
+        key: node-modules-${{ secrets.CACHE_VERSION }}-${{ hashFiles('package.json') }}
+
+    - id: test
+      name: Test
+      run: |
+        npm run test
