--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -162,6 +162,8 @@ jobs:
     - id: checkout
       name: Checkout
       uses: actions/checkout@v3
+      with:
+        ref: ${{ github.event.repository.default_branch }}
 
     - id: cache-dependencies
       name: Cache dependencies
@@ -176,17 +178,16 @@ jobs:
       name: Identity
       run: |
         git config --global user.email "actions@github.com"
+        # git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
         git config --global user.name "GitHub Actions"
+        # git config --global user.name "${GITHUB_ACTOR}"
         git config --list
 
-    - id: release-action
-      name: Release action
-      uses: K-Phoen/semver-release-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
-      with:
-        release_branch: master
-        release_strategy: tag
+    - id: version
+      name: Version
+      run: |
+        version=$(git tag --list --sort v:refname --merged | tail -1)
+        echo ::set-output name=VERSION::$version
 
     - id: push-tag
       name: Push tag
