--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -177,26 +177,24 @@ jobs:
     - id: identity
       name: Identity
       run: |
-        git config --global user.email "actions@github.com"
-        # git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-        git config --global user.name "GitHub Actions"
-        # git config --global user.name "${GITHUB_ACTOR}"
+        # git config --global user.email "actions@github.com"
+        git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+        # git config --global user.name "GitHub Actions"
+        git config --global user.name "${GITHUB_ACTOR}"
         git config --list
 
     - id: version
       name: Version
       run: |
-        version=$(git tag --list --sort v:refname --merged | tail -1)
-        # echo ::set-output name=VERSION::$version
-        echo "{VERSION}={$version}" >> $GITHUB_OUTPUT
+        CURRENT_VERSION=$(git tag --list --sort v:refname --merged | tail -1)
+        VERSION=$(npx semver $CURRENT_VERSION --increment patch)
+        echo "version=$VERSION" >> $GITHUB_OUTPUT
 
     - id: push-tag
       name: Push tag
       env:
         VERSION: ${{ steps.version.outputs.version }}
-      run: |
-        echo "$VERSION"
-        
+      run: |        
         # push new tag
         git tag -a $VERSION -m "$VERSION"
         git push origin $VERSION
