--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "semver": "7.3.8"
+    "@jsdevtools/version-bump-prompt": "6.1.0"
   }
 }
