--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -177,10 +177,10 @@ jobs:
     - id: identity
       name: Identity
       run: |
-        # git config --global user.email "actions@github.com"
-        git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-        # git config --global user.name "GitHub Actions"
-        git config --global user.name "${GITHUB_ACTOR}"
+        git config --global user.email "actions@github.com"
+        # git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+        git config --global user.name "GitHub Actions"
+        # git config --global user.name "${GITHUB_ACTOR}"
         git config --list
 
     - id: tag
