--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,6 +14,9 @@ on:
     types:
       - created
 
+permissions:
+  pull-requests: write
+
 env:
   GITHUB: ${{ toJson(github) }}
   NODE_VERSION: 16
