--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -167,8 +167,6 @@ jobs:
     - id: checkout
       name: Checkout
       uses: actions/checkout@v3
-      with:
-        ref: ${{ github.event.repository.default_branch }}
 
     - id: cache-dependencies
       name: Cache dependencies
@@ -183,12 +181,15 @@ jobs:
       name: Identity
       run: |
         git config --global user.email "actions@github.com"
-        # git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
         git config --global user.name "GitHub Actions"
-        # git config --global user.name "${GITHUB_ACTOR}"
         git config --list
 
-    - id: tag
-      name: Tag
+    - id: bump
+      name: Bump
       run: |
-        node node_modules/.bin/bump patch --commit "release v" --tag "v" --push
+        node node_modules/.bin/bump patch --commit "release v" --tag "v"
+        
+    - id: check
+      name: Check
+      run: |
+        cat package.json
